src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #202e52;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #82ece1;
  --ifm-color-primary-darkest: #e60b0b;
  --ifm-color-primary-light: #c4d529;
  --ifm-color-primary-lighter: #5ed832;
  --ifm-color-primary-lightest: #dd4fb2;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #fff;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #82ece1;
  --ifm-color-primary-darkest: #e60b0b;
  --ifm-color-primary-light: #c4d529;
  --ifm-color-primary-lighter: #5ed832;
  --ifm-color-primary-lightest: #dd4fb2;
  --docusaurus-highlighted-code-line-bg: rgba(255, 6, 6, 0.3);
  --ifm-link-color: #fff;

  body,
  .menu,
  main,
  .pagination-nav {
    background: #2b385b;
    z-index: 1;
  }

  footer,
  nav,
  article,
  .navbar,
  .pagination-nav__link {
    background: #202e52;
  }

  footer {
    z-index: 1;
  }

  .pagination-nav__link {
    border-left: 3px solid #69dae2;
  }

  .theme-doc-footer {
    /* background: #2b385c; */
    padding-bottom: 20px;
  }

  .navbar__search-input,
  input[type="search"] {
    background: #2b385c;
    border: 1px solid #bcd7ed;
  }

  mark {
    background: #69dae2;
  }

  article {
    padding: 20px 20px 0px 20px;
    border-radius: 11px;
    /* border-bottom: 1px solid #bcd7ed; */
  }

  kbd {
    background: #2b385c;
    border: 1px solid #bcd7ed;
  }
}

/* Make SVGs non-interactive to prevent click interference on base url landing page */
svg {
  pointer-events: none;
}

